# bigreqsproto

./: Makefile.in  aclocal.m4  configure  configure.ac
specs/: .gitignore  Makefile.am  Makefile.in  bigreq.xml  docbook.am  formats-xref.am  formats.am
