
#
#		Generate the Big Requests Extension documentation
#

if ENABLE_SPECS
if HAVE_XMLTO

# Main DocBook/XML files (DOCTYPE book)
docbook = bigreq.xml

# Document chapters, appendix and images included by the docbooks
chapters =

# The location where the DocBook/XML files and their generated formats are installed
shelfdir = $(docdir)

# Generate DocBook/XML output formats with or without stylesheets
include docbook.am

endif HAVE_XMLTO
endif ENABLE_SPECS
